--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="line typing-animation">Neguinho Corts</p>
             <div class="buttons">
                 <a href="https://booksy.com/pt-br/instant-experiences/widget/247164,309667" target="_blank"><button class="btns">AGENDAR</button></a>
-                <a href="#equipe"><button class="btns">QUEM SOMOS</button></a>
+                <a href="Telas/CadastroCliente.php"><button class="btns">Cadastre-se!</button></a>
             </div>
             <video playsinline autoplay muted loop>
                 <source src="videos/video2.mp4" type="video/mp4" alt="">
